--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   go_router: ^14.8.1
   google_sign_in: ^6.3.0
   logger: ^2.5.0
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
