--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: lonepeak
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -15,6 +15,7 @@ dependencies:
   google_sign_in: ^6.3.0
   logger: ^2.5.0
   flutter_riverpod: ^2.6.1
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
@@ -23,3 +24,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
+    - assets/svgs/
