--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   flutter_svg: ^2.0.17
   cloud_firestore: ^5.6.6
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
