--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cloud_firestore: ^5.6.6
   intl: ^0.20.2
   url_launcher: ^6.3.1
+  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_test:
