--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   cloud_firestore: ^5.6.6
   intl: ^0.20.2
   url_launcher: ^6.3.1
+  flutter_secure_storage: ^9.2.4
+  file_picker: ^10.1.9
+  firebase_storage: ^12.4.6
 
 dev_dependencies:
   flutter_test:
