--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   file_picker: ^10.1.9
   firebase_storage: ^12.4.6
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
