--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,30 +4,30 @@ publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ^3.7.2
+  sdk: ^3.5.3
 
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.12.1
-  firebase_auth: ^5.5.1
-  go_router: ^14.8.1
-  google_sign_in: ^6.3.0
-  logger: ^2.5.0
-  flutter_riverpod: ^2.6.1
-  flutter_svg: ^2.0.17
-  cloud_firestore: ^5.6.6
-  intl: ^0.20.2
-  url_launcher: ^6.3.1
-  flutter_secure_storage: ^9.2.4
-  file_picker: ^10.1.9
-  firebase_storage: ^12.4.6
-  path: ^1.9.1
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  go_router: ^14.3.0
+  google_sign_in: ^6.2.1
+  logger: ^2.4.0
+  flutter_riverpod: ^2.5.1
+  flutter_svg: ^2.0.10+1
+  cloud_firestore: ^5.4.3
+  intl: ^0.19.0
+  url_launcher: ^6.3.0
+  flutter_secure_storage: ^9.2.2
+  file_picker: ^8.1.2
+  firebase_storage: ^12.3.2
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
