--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,30 +4,30 @@ publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ^3.5.3
+  sdk: ^3.8.0  # Update SDK to match Dart 3.8.1 you're using
 
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.6.0
-  firebase_auth: ^5.3.1
-  go_router: ^14.3.0
+  firebase_core: ^3.14.0
+  firebase_auth: ^5.6.0
+  go_router: ^15.2.0
   google_sign_in: ^6.2.1
   logger: ^2.4.0
   flutter_riverpod: ^2.5.1
-  flutter_svg: ^2.0.10+1
-  cloud_firestore: ^5.4.3
-  intl: ^0.19.0
+  flutter_svg: ^2.2.0
+  cloud_firestore: ^5.6.9
+  intl: ^0.20.2
   url_launcher: ^6.3.0
   flutter_secure_storage: ^9.2.2
-  file_picker: ^8.1.2
-  firebase_storage: ^12.3.2
-  path: ^1.9.0
+  file_picker: ^10.2.0
+  firebase_storage: ^12.4.7
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
