--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,3 +1,4 @@
+include: package:flutter_lints/flutter.yaml
 analyzer:
   errors:
-    prefer_const_constructors: ignore
+    prefer_const_constructors: warning
