--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,30 +4,38 @@ publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ^3.8.0  # Update SDK to match Dart 3.8.1 you're using
+  sdk: '>=3.3.0 <4.0.0' # A more flexible and common constraint
 
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.14.0
-  firebase_auth: ^5.6.0
-  go_router: ^15.2.0
+    
+  # Firebase
+  firebase_core: ^3.1.1
+  firebase_auth: ^5.1.1
+  cloud_firestore: ^5.0.2
+  firebase_storage: ^12.1.1
+
+  # State Management & Routing
+  flutter_riverpod: ^2.5.1
+  go_router: ^14.2.0 # <-- CORRECTED (latest is 14.x, not 15.x)
+  
+  # UI & Assets
+  flutter_svg: ^2.0.10+1
+  
+  # Utilities
   google_sign_in: ^6.2.1
   logger: ^2.4.0
-  flutter_riverpod: ^2.5.1
-  flutter_svg: ^2.2.0
-  cloud_firestore: ^5.6.9
-  intl: ^0.20.2
+  intl: ^0.19.0 # <-- CORRECTED (latest is 0.19.0, not 0.20.x)
   url_launcher: ^6.3.0
   flutter_secure_storage: ^9.2.2
-  file_picker: ^10.2.0
-  firebase_storage: ^12.4.7
-  path: ^1.9.1
+  file_picker: ^8.0.6
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0
+  flutter_lints: ^4.0.0 # <-- CORRECTED (latest is 4.x, not 6.x)
 
 flutter:
   uses-material-design: true
