--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,16 +27,17 @@ jobs:
       - name: Run tests
         run: flutter test
 
-      - name: Configure Keystore
+      - name: Decode Keystore
         run: |
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/release.jks
-          echo "storeFile=release.jks" > android/key.properties
-          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
-          echo "storePassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
-          echo "keyPassword=${{ secrets.KEY_ALIAS_PASSWORD }}" >> android/key.properties
 
       - name: Build release APK
-        run: flutter build apk --release
+        run: |
+          flutter build apk --release \
+            --keystore-password "${{ secrets.KEY_PASSWORD }}" \
+            --key-alias "${{ secrets.KEY_ALIAS }}" \
+            --key-password "${{ secrets.KEY_ALIAS_PASSWORD }}" \
+            --keystore-path "android/app/release.jks"
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
