--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -27,5 +27,13 @@ jobs:
       - name: Run tests
         run: flutter test
 
+      - name: Configure Keystore
+        run: |
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/release.jks
+          echo "storeFile=release.jks" > android/key.properties
+          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
+          echo "storePassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
+          echo "keyPassword=${{ secrets.KEY_ALIAS_PASSWORD }}" >> android/key.properties
+
       - name: Build APK
         run: flutter build apk --debug
