working of Download button

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   file_picker: ^10.1.9
   firebase_storage: ^12.4.6
   path: ^1.9.1
+  pdf: ^3.10.8
+  printing: ^5.11.0
 
 dev_dependencies:
   flutter_test:
